examples/test/testpolicy2933.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2933
  namespace: namespace339
spec:
  podSelector:
    matchLabels:
      key10: value42
      key45: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value19
          key23: value2
          key15: value42
      podSelector:
        matchLabels:
          key18: value1
          key15: value19
          key7: value6
